--- a/lego0821.html
+++ b/lego0821.html
@@ -9,133 +9,14 @@
             <ul>
                 <li><a href="#" class="logo"><img src="lego0821.png" class="logoImg"></a></li>
                 <li><a href="#">作品</a></li>
-                <li><a href="#" class="news"><img src="bell.svg"></a></li>
+                <li><a href="#">通知</li>
             </ul>
         </nav>
-        <h1>
+        <br>
+        <br>
+        <br>
+        <h1 style="color: black">
             header1
         </h1>
-        <p>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-            paragraph
-            <br>
-        </p>
     </body>
 </html>
