--- a/lego0821.html
+++ b/lego0821.html
@@ -16,7 +16,7 @@
         <br>
         <br>
         <h1 style="color: black">
-            header1
+            header1.
         </h1>
     </body>
 </html>
