--- a/lego0821.html
+++ b/lego0821.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="https://lego0821.github.io/lego0821/index.css">
         <title>lego0821</title>
         <style>
             #myName{
