--- a/lego0821.html
+++ b/lego0821.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://lego0821.github.io/lego0821/index.css">
+        <link rel='shortcut icon' href='lego0821.png'>
         <title>lego0821</title>
         <style>
             #myName{
