--- a/lego0821.html
+++ b/lego0821.html
@@ -21,8 +21,7 @@
         <nav>
             <ul>
                 <li><a href="#" class="logo"><img src="lego0821.png" class="logoImg" title="トップへ"></a></li>
-                <li><a href="#">作品</a></li>
-                <li><a href="#">通知</a></li>
+                <li><a href="#">作品</a><a href="#">通知</a></li>
             </ul>
         </nav>
         <br>
