--- a/lego0821.html
+++ b/lego0821.html
@@ -28,5 +28,9 @@
         <br>
         <br>
         <h1 id="myName">lego0821</h1>
+        <p>Scratcher</p>
+        <script>
+            
+        </script>
     </body>
 </html>
