--- a/lego0821.html
+++ b/lego0821.html
@@ -28,9 +28,9 @@
         <br>
         <br>
         <h1 id="myName">lego0821</h1>
-        <p>Scratcher</p>
+        <p style='color: gray'>Scratcher|<span id='joinDate'></span></p>
         <script>
-            
+            const join = document.getELementById('joinDate');
         </script>
     </body>
 </html>
