--- a/lego0821.html
+++ b/lego0821.html
@@ -28,9 +28,6 @@
         <br>
         <br>
         <h1 id="myName">lego0821</h1>
-        <p style='color: gray'>Scratcher|<span id='joinDate'></span></p>
-        <script>
-            const join = document.getELementById('joinDate');
-        </script>
+        <p style='color: gray;font-size: 10px;'>Scratcher|2021年12月に参加</p>
     </body>
 </html>
