--- a/lego0821.html
+++ b/lego0821.html
@@ -15,8 +15,8 @@
                 content: url(lego0821.png);
                 vertical-align: text-top;
             }
-            h1,h2,h3,h4,h5,h6{
-                line-height: 1em;
+            h1{
+                line-height: 50px;
             }
         </style>
     </head>
