--- a/lego0821.html
+++ b/lego0821.html
@@ -17,6 +17,8 @@
             }
             h1{
                 line-height: 50px;
+                margin: 0;
+                padding: 0;
             }
         </style>
     </head>
