--- a/lego0821.html
+++ b/lego0821.html
@@ -7,7 +7,7 @@
         <title>lego0821</title>
         <style>
             #myName{
-                font-weight: normal;
+                line-height: 50px;
                 font-size: 50px;
                 color: black;
             }
@@ -15,8 +15,8 @@
                 content: url(lego0821.png);
                 vertical-align: text-top;
             }
-            h1{
-                line-height: 50px;
+            h1,h2,h3,h4,h5,h6{
+                font-weight: normal;
                 margin: 0;
                 padding: 0;
             }
@@ -35,5 +35,7 @@
         <br>
         <h1 id="myName">lego0821</h1>
         <p style='color: gray;font-size: 10px;'>Scratcher|2021年12月に参加</p>
+        <h2>私のお気に入り</h2>
+        <a><img></a>
     </body>
 </html>
