--- a/lego0821.html
+++ b/lego0821.html
@@ -36,6 +36,6 @@
         <h1 id="myName">lego0821</h1>
         <p style='color: gray;font-size: 10px;'>Scratcher|2021年12月に参加</p>
         <h2>私のお気に入り</h2>
-        <a><img src='オンライン広場.png'></a>
+        <a><img src='オンライン広場.png' alt='オンライン広場'></a>
     </body>
 </html>
