--- a/lego0821.html
+++ b/lego0821.html
@@ -35,7 +35,12 @@
         <br>
         <h1 id="myName">lego0821</h1>
         <p style='color: gray;font-size: 10px;'>Scratcher|2021年12月に参加</p>
-        <h2>私のお気に入り</h2>
-        <a><img src='オンライン広場.png' alt='オンライン広場'></a>
+        <h2> 私のお気に入り</h2>
+        <div class='card'>
+            <a>
+                <img src='オンライン広場.png' alt='オンライン広場'>
+                <p>オンライン広場</p>
+            </a>
+        </div>
     </body>
 </html>
