--- a/lego0821.html
+++ b/lego0821.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--efee-->
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -37,7 +37,7 @@
         <h1 id="myName">lego0821</h1>
         <p style='color: gray;font-size: 10px;'>Scratcher|2021年12月に参加</p>
         <h2> 私のお気に入り</h2>
-        <div class='card'>
+        <div class='card' style='height: 600px;width: 500px;'>
             <a>
                 <img src='オンライン広場.png' alt='オンライン広場'>
                 <p>オンライン広場</p>
