--- a/lego0821.html
+++ b/lego0821.html
@@ -38,7 +38,7 @@
         <p style='color: gray;font-size: 10px;'>Scratcher|2021年12月に参加</p>
         <h2> 私のお気に入り</h2>
         <div class='card' style='height: 450px;width: 375px;'>
-            <a>
+            <a href='#'>
                 <img src='オンライン広場.png' alt='オンライン広場'>
                 <p>オンライン広場</p>
             </a>
