--- a/lego0821.html
+++ b/lego0821.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="https://lego0821.github.io/lego0821/index.css">
-        <link rel='stylesheet' href='https://lego0821.github.io/lego0821/production_card.css'>
+        <link rel="stylesheet" href="https://lego0821.github.io/lego0821/CSS/index.css">
+        <link rel='stylesheet' href='https://lego0821.github.io/lego0821/CSS/production_card.css'>
         <link rel='shortcut icon' href='lego0821.png'>
         <title>lego0821</title>
         <style>
