--- a/lego0821.html
+++ b/lego0821.html
@@ -26,7 +26,7 @@
     <body>
         <nav>
             <ul>
-                <li><a href="#" class="logo,navs"><img src="lego0821.png" class="logoImg" title="トップへ"></a></li>
+                <li><a href="#" class="logo,navs"><img src="https://lego0821.github.io/lego0821image/lego0821.png" class="logoImg" title="トップへ"></a></li>
                 <li id='navigations'><a href="#" class='navs'>作品</a><a href="#" class='navs'>通知</a></li>
             </ul>
         </nav>
