--- a/lego0821.html
+++ b/lego0821.html
@@ -39,7 +39,7 @@
         <div class='card' style='height: 450px;width: 375px;'>
             <h2> 私のお気に入り</h2>
             <a href='#'>
-                <img src='オンライン広場.png' alt='オンライン広場'>
+                <img src='https://lego0821.github.io/lego0821image/オンライン広場.png' alt='オンライン広場'>
                 <p>オンライン広場</p>
             </a>
         </div>
