--- a/lego0821.html
+++ b/lego0821.html
@@ -13,7 +13,7 @@
                 color: black;
             }
             #myName::before{
-                content: url(lego0821.png);
+                content: url(https://lego0821.github.io/lego0821image/lego0821.png);
                 vertical-align: text-top;
             }
             h1,h2,h3,h4,h5,h6{
