--- a/lego0821.html
+++ b/lego0821.html
@@ -13,7 +13,7 @@
                 color: black;
             }
             #myName::before{
-                content: url(https://lego0821.github.io/lego0821image/lego0821.png);
+                content: url(https://lego0821.github.io/lego0821/image/lego0821.png);
                 vertical-align: text-top;
             }
             h1,h2,h3,h4,h5,h6{
@@ -39,7 +39,7 @@
         <div class='card' style='height: 450px;width: 375px;'>
             <h2> 私のお気に入り</h2>
             <a href='#'>
-                <img src='https://lego0821.github.io/lego0821image/オンライン広場.png' alt='オンライン広場'>
+                <img src='https://lego0821.github.io/lego0821/image/オンライン広場.png' alt='オンライン広場'>
                 <p>オンライン広場</p>
             </a>
         </div>
