--- a/lego0821.html
+++ b/lego0821.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://lego0821.github.io/lego0821/CSS/index.css">
         <link rel='stylesheet' href='https://lego0821.github.io/lego0821/CSS/production_card.css'>
-        <link rel='shortcut icon' href='lego0821.png'>
+        <link rel='shortcut icon' href='https://lego0821.github.io/lego0821/image/lego0821.png'>
         <title>lego0821</title>
         <style>
             #myName{
