--- a/lego0821.html
+++ b/lego0821.html
@@ -38,10 +38,13 @@
         <p style='color: gray;font-size: 10px;'>Scratcher|2021年12月に参加</p>
         <div class='card' style='height: 450px;width: 375px;'>
             <h2> 私のお気に入り</h2>
-            <a href='#'>
+            <a href='https://scratch.mit.edu/projects/718134419'>
                 <img src='https://lego0821.github.io/lego0821/image/オンライン広場.png' alt='オンライン広場'>
                 <p>オンライン広場</p>
             </a>
+            <p>
+                オンラインで最大5人までプレイできるオンラインゲームです
+            </p>
         </div>
         <a href='#' class='animation' id='top'>
             ▲TOP
