--- a/lego0821.html
+++ b/lego0821.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang='ja'>
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://lego0821.github.io/lego0821/CSS/index.css">
