--- a/lego0821.html
+++ b/lego0821.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang='ja'>
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" name='viewport'>
         <link rel="stylesheet" href="https://lego0821.github.io/lego0821/CSS/index.css">
         <link rel='stylesheet' href='https://lego0821.github.io/lego0821/CSS/production_card.css'>
         <link rel='shortcut icon' href='https://lego0821.github.io/lego0821/image/lego0821.png'>
