--- a/lego0821.html
+++ b/lego0821.html
@@ -46,6 +46,10 @@
                 オンラインで最大5人までプレイできるオンラインゲームです
             </p>
         </div>
+        <h2>私の作品</h2>
+        <div class='card'>
+            <img src=''>
+        </div>
         <a href='#' class='animation' id='top'>
             ▲TOP
         </a>
