--- a/lego0821.html
+++ b/lego0821.html
@@ -50,7 +50,7 @@
         <h2>私の作品</h2>
         <div class='card'>
             <img src='https://lego0821.github.io/lego0821/image/怪盗ゲーム2.png' alt='オンライン広場'>
-            <p>オンライン広場</p>
+            <p>怪盗ゲーム　第2話</p>
         </div>
         <a href='#' class='animation' id='top'>
             ▲TOP
