--- a/json.html
+++ b/json.html
@@ -4,6 +4,10 @@
     <meta charset='utf-8'>
   </head>
   <body>
-    
+    <select>
+      <option value='online'>オンライン広場</option>
+      <option value='steal2'>怪盗ゲーム　第2話</option>
+      <option value='arrow'>弓矢ゲーム</option>
+    </select>
   </body>
 </html>
