--- a/json.html
+++ b/json.html
@@ -9,5 +9,11 @@
       <option value='steal2'>怪盗ゲーム　第2話</option>
       <option value='arrow'>弓矢ゲーム</option>
     </select>
+    <select>
+      <option value='projectId'>プロジェクトid</option>
+      <option value='detail'>概要</option>
+      <option value='HowToUse'>使い方</option>
+    </select>
+    <script src='https://lego0821.github.io/lego0821/jqery-3.7.1.min.js'></script>
   </body>
 </html>
