--- a/json.html
+++ b/json.html
@@ -14,6 +14,20 @@
       <option value='detail'>概要</option>
       <option value='HowToUse'>使い方</option>
     </select>
+    <br>
+    <p id='output'></p>
     <script src='https://lego0821.github.io/lego0821/jqery-3.7.1.min.js'></script>
+    <script>
+      'use strict';
+      $(document).ready(function(){
+        $.ajax({url: 'projects.json',dataType: 'json'})
+        .done(function (data){
+          console.log(data);
+        });
+        .fail(function (data){
+          window.alert('読み込みエラー');
+        });
+      });
+    </script>
   </body>
 </html>
