--- a/json.html
+++ b/json.html
@@ -16,7 +16,7 @@
     </select>
     <br>
     <p id='output'></p>
-    <script src='jqery-3.7.1.min.js'></script>
+    <script src='https://code.jquery.com/jquery-3.7.1.min.js'></script>
     <script>
       'use strict';
       $(document).ready(function(){
