--- a/lego0821.html
+++ b/lego0821.html
@@ -51,6 +51,7 @@
         <div class='card'>
             <img src='https://lego0821.github.io/lego0821/image/怪盗ゲーム2.png' alt='オンライン広場'>
             <p>怪盗ゲーム 第2話</p>
+            <p>スタートから警察官や防犯カメラ、レーザーに見つからないように宝石を盗んでゴールへ行くゲームです。第1話は<a href='https://scratch.mit.edu/projects/666133831/'>こちら</a></p>
         </div>
         <a href='#' class='animation' id='top'>
             ▲TOP
