--- a/json.html
+++ b/json.html
@@ -23,7 +23,7 @@
         //ファイルの読み込み
         $.ajax({url: 'https://lego0821.github.io/lego0821/projects.json', dataType: 'json'})
         .done(function(data){
-          console.log(data);
+          console.dir(data);
         })
         .fail(function(){
           window.alert('読み込みエラー');
