--- a/lego0821.html
+++ b/lego0821.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="this page is about my scratch account.">
         <link rel="stylesheet" href="https://lego0821.github.io/lego0821/CSS/index.css">
         <link rel='stylesheet' href='https://lego0821.github.io/lego0821/CSS/production_card.css'>
         <link rel='shortcut icon' href='https://lego0821.github.io/lego0821/image/lego0821.png'>
