--- a/lego0821.html
+++ b/lego0821.html
@@ -41,7 +41,7 @@
         <div class='card' style='height: 450px;width: 375px;'>
             <h2> 私のお気に入り</h2>
             <a href='https://scratch.mit.edu/projects/718134419'>
-                <img src='https://lego0821.github.io/lego0821/image/オンライン広場.png' alt='オンライン広場'>
+                <img src='https://lego0821.github.io/lego0821/image/オンライン広場.png' alt='thumbnail'>
                 <p>オンライン広場</p>
             </a>
             <p>
