--- a/json.html
+++ b/json.html
@@ -23,10 +23,8 @@
         //ファイルの読み込み
         $.ajax({url: 'https://lego0821.github.io/lego0821/projects.json', dataType: 'json'})
         .done(function(data){
-          data.forEach(function(item){
-            console.log(item);
-          })
-        }
+          console.log(data);
+        })
         .fail(function(){
           window.alert('読み込みエラー');
         });
