--- a/json.html
+++ b/json.html
@@ -10,7 +10,7 @@
       <option value='2'>弓矢ゲーム</option>
     </select>
     <select id='detail'>
-      <option value='projectId'>プロジェクトid</option>
+      <option value='id'>プロジェクトid</option>
       <option value='detail'>概要</option>
       <option value='HowToUse'>使い方</option>
     </select>
