--- a/project.html
+++ b/project.html
@@ -3,9 +3,15 @@
   <head>
     <meta charset='utf-8'>
     <link rel='shortcut icon' href='https://lego0821.github.io/lego0821/image/lego0821.png'>
+    <link rel='stylesheet' href='https://lego0821.github.io/lego0821/CSS/index.css'>
   </head>
   <body>
-    
+    <nav>
+      <ul>
+          <li><a href="#" class="logo,navs"><img src="https://lego0821.github.io/lego0821/image/lego0821.png" class="logoImg" title="トップへ"></a></li>
+          <li id='navigations'><a href="#" class='navs'>作品</a><a href="#" class='navs'>通知</a></li>
+      </ul>
+    </nav>
     <script>
       let url = location.href;
       let projectKey = substr(url.length(),1);
