--- a/project.html
+++ b/project.html
@@ -4,6 +4,11 @@
     <meta charset='utf-8'>
     <link rel='shortcut icon' href='https://lego0821.github.io/lego0821/image/lego0821.png'>
     <link rel='stylesheet' href='https://lego0821.github.io/lego0821/CSS/index.css'>
+    <style>
+      #thumbnail{
+        
+      }
+    </style>
   </head>
   <body>
     <nav>
@@ -12,6 +17,7 @@
           <li id='navigations'><a href="#" class='navs'>作品</a><a href="#" class='navs'>通知</a></li>
       </ul>
     </nav>
+    <img id='thumbnail'>
     <script>
       let url = location.href;
       let projectKey = substr(url.length(),1);
