--- a/project.html
+++ b/project.html
@@ -13,6 +13,8 @@
         color: white;
         padding: 10px 30px;
         transition: all 0.3s ease;
+        border: none;
+        virtical-align: top;
       }
       .button:hover{
         filter: brightness(1.5);
@@ -27,7 +29,7 @@
       </ul>
     </nav>
     <br><br><br><br><br>
-    <div><img id='thumbnail'><input type='button' class='button' style='background-color: #71e861'></div>
+    <div><img id='thumbnail'><input type='button' class='button' style='background-color: #39f76c'></div>
     <h2>使い方</h2>
     
     <script>
