--- a/project.html
+++ b/project.html
@@ -29,7 +29,7 @@
       </ul>
     </nav>
     <br><br><br><br><br>
-    <div><img id='thumbnail'><input type='button' class='button' style='background-color: #39f76c'></div>
+    <div><img id='thumbnail'><input type='button' class='button' style='background-color: #39f76c' value='Scratchで開く'></div>
     <h2>使い方</h2>
     
     <script>
