--- a/project.html
+++ b/project.html
@@ -10,11 +10,13 @@
         height: 450px;
       }
       .button{
+        height: 30px;
+        width: 200px;
         color: white;
-        padding: 10px 30px;
         transition: all 0.3s ease;
         border: none;
         virtical-align: top;
+        cursor: pointer;
       }
       .button:hover{
         filter: brightness(1.5);
