--- a/project.html
+++ b/project.html
@@ -32,6 +32,8 @@
     </nav>
     <br><br><br><br><br>
     <img id='thumbnail'><input type='button' class='button' style='background-color: #39f76c' value='Scratchで開く'>
+    <br>
+    <input type='button' class='button' style='background-color: #f73939' value='Turbowarpで開く'>
     <h2>使い方</h2>
     
     <script>
