--- a/project.html
+++ b/project.html
@@ -10,12 +10,13 @@
         height: 450px;
       }
       .button{
+        text-align: center;
         height: 30px;
         width: 200px;
         color: white;
         transition: all 0.3s ease;
         border: none;
-        virtical-align: top;
+        virtical-align: middle;
         cursor: pointer;
       }
       .button:hover{
