--- a/project.html
+++ b/project.html
@@ -36,8 +36,6 @@
     <br>
     <input type='button' class='button' style='background-color: #f73939' value='Turbowarpで開く'>
     <h2>使い方</h2>
-    
-    <script>
-    </script>
+    <script src='https://lego0821.github.io/lego0821/JS/project.js'></script>
   </body>
 </html>
