--- a/project.html
+++ b/project.html
@@ -32,9 +32,9 @@
       </ul>
     </nav>
     <br><br><br><br><br>
-    <img id='thumbnail'><input type='button' class='button' style='background-color: #39f76c' value='Scratchで開く'>
+    <img id='thumbnail'><input type='button' class='button' style='background-color: #39f76c' value='Scratchで開く' id='scr'>
     <br>
-    <input type='button' class='button' style='background-color: #f73939' value='Turbowarpで開く'>
+    <input type='button' class='button' style='background-color: #f73939' value='Turbowarpで開く' id='tur'>
     <h2>使い方</h2>
     <script src='https://lego0821.github.io/lego0821/JS/project.js'></script>
   </body>
