--- a/project.html
+++ b/project.html
@@ -39,6 +39,7 @@
     <br>
     <input type='button' class='button' style='background-color: #f73939' value='Turbowarpで開く' id='tur'>
     <h2>使い方</h2>
+    <script src='https://code.jquery.com/jquery-3.7.1.min.js'></script>
     <script src='https://lego0821.github.io/lego0821/JS/project.js'></script>
   </body>
 </html>
