--- a/project.html
+++ b/project.html
@@ -25,6 +25,11 @@
       .button:hover{
         filter: brightness(1.5);
       }
+      #side{
+        position: fixed;
+        top: ;
+        right: 0;
+      }
     </style>
   </head>
   <body>
@@ -34,12 +39,19 @@
           <li id='navigations'><a href="#" class='navs'>作品</a><a href="#" class='navs'>通知</a></li>
       </ul>
     </nav>
+
+    
     <br><br><br><br><br>
-    <img id='thumbnail'><input type='button' class='button' style='background-color: #39f76c' value='Scratchで開く' id='scr'>
-    <br>
-    <input type='button' class='button' style='background-color: #f73939' value='Turbowarpで開く' id='tur'>
+
+    <div id='side'>
+      <img id='thumbnail'><input type='button' class='button' style='background-color: #39f76c' value='Scratchで開く' id='scr'>
+      <br>
+      <input type='button' class='button' style='background-color: #f73939' value='Turbowarpで開く' id='tur'>
+    </div>
     <h2>使い方</h2>
     <p id='detail'></p>
+
+    
     <script src='https://code.jquery.com/jquery-3.7.1.min.js'></script>
     <script src='https://lego0821.github.io/lego0821/JS/project.js'></script>
   </body>
