--- a/project.html
+++ b/project.html
@@ -25,10 +25,15 @@
       .button:hover{
         filter: brightness(1.5);
       }
+      nav{
+        z-index: 10;
+      }
       #side{
         position: fixed;
-        top: 90px;
+        top: 0;
         right: 0;
+        z-index: -1;
+        height: 100%;
       }
     </style>
   </head>
