--- a/project.html
+++ b/project.html
@@ -34,6 +34,8 @@
         right: 0;
         z-index: -1;
         height: 100%;
+        width: 200px;
+        text-align: center;
       }
     </style>
   </head>
