--- a/project.html
+++ b/project.html
@@ -36,6 +36,7 @@
         height: 100%;
         width: 200px;
         text-align: center;
+        background-color: #fffcdb;
       }
     </style>
   </head>
