--- a/project.html
+++ b/project.html
@@ -34,7 +34,7 @@
         right: 0;
         z-index: -1;
         height: 100%;
-        width: 200px;
+        width: 750px;
         text-align: center;
         background-color: #fffcdb;
       }
@@ -51,8 +51,9 @@
     
     <br><br><br><br><br>
 
+    <img id='thumbnail'>
     <div id='side'>
-      <img id='thumbnail'><input type='button' class='button' style='background-color: #39f76c' value='Scratchで開く' id='scr'>
+      <input type='button' class='button' style='background-color: #39f76c' value='Scratchで開く' id='scr'>
       <br>
       <input type='button' class='button' style='background-color: #f73939' value='Turbowarpで開く' id='tur'>
     </div>
