--- a/lego0821.html
+++ b/lego0821.html
@@ -38,7 +38,7 @@
         <br>
         <h1 id="myName">lego0821</h1>
         <p style='color: gray;font-size: 10px;'>Scratcher|2021年12月に参加</p>
-        <div class='card' style='height: 450px;width: 375px;'>
+        <div class='card'>
             <h2> 私のお気に入り</h2>
             <a href='https://scratch.mit.edu/projects/718134419'>
                 <img src='https://lego0821.github.io/lego0821/image/オンライン広場.png' alt='thumbnail'>
