--- a/project.html
+++ b/project.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang='ja'>
   <head>
     <title></title>
     <meta charset='utf-8'>
@@ -51,7 +51,7 @@
     
     <br><br><br><br><br>
 
-    <img id='thumbnail'>
+    <img id='thumbnail' alt='thumb nail'>
     <div id='side'>
       <br>
       <br>
