--- a/project.html
+++ b/project.html
@@ -8,6 +8,7 @@
     <meta name="theme-color" content="#9effa1"/>
     <link rel='shortcut icon' href='https://lego0821.github.io/lego0821/image/lego0821.png'>
     <link rel='stylesheet' href='https://lego0821.github.io/lego0821/CSS/index.css'>
+    <link rel='manifest' href='manifest.json'>
     <style>
       #thumbnail{
         width: 600px;
