--- a/project.html
+++ b/project.html
@@ -15,6 +15,7 @@
         height: 450px;
       }
       .button{
+        z-index: 1;
         text-align: center;
         height: 30px;
         width: 200px;
