--- a/project.html
+++ b/project.html
@@ -55,12 +55,12 @@
       <br>
       <br>
       <br>
-      <br>
-      <br>
-      <input type='button' class='button' style='background-color: #39f76c' value='Scratchで開く' id='scr'>
-      <br>
-      <br>
-      <input type='button' class='button' style='background-color: #f73939' value='Turbowarpで開く' id='tur'>
+      <div style='z-index: 5'>
+        <input type='button' class='button' style='background-color: #39f76c' value='Scratchで開く' id='scr'>
+        <br>
+        <br>
+        <input type='button' class='button' style='background-color: #f73939' value='Turbowarpで開く' id='tur'>
+      </div>
     </div>
     <h2>使い方</h2>
     <p id='detail'></p>
