--- a/project.html
+++ b/project.html
@@ -10,6 +10,9 @@
     <link rel='stylesheet' href='https://lego0821.github.io/lego0821/CSS/index.css'>
     <link rel='manifest' href='manifest.json'>
     <style>
+      nav{
+        z-index: 1;
+      }
       #thumbnail{
         width: 600px;
         height: 450px;
