--- a/project.html
+++ b/project.html
@@ -39,6 +39,9 @@
         text-align: center;
         background-color: #fffcdb;
       }
+      #projectName{
+        height: 50px;
+      }
     </style>
   </head>
   <body>
@@ -67,8 +70,11 @@
         <input type='button' class='button' style='background-color: #f73939' value='Turbowarpで開く' id='tur'>
       </div>
     </div>
-    <h2>使い方</h2>
+    <h2 id='projectName'></h2>
+    <h2>概要</h2>
     <p id='detail'></p>
+    <h2>使い方</h2>
+    <p id='using'></p>
 
     
     <script src='https://code.jquery.com/jquery-3.7.1.min.js'></script>
