--- a/project.html
+++ b/project.html
@@ -74,7 +74,7 @@
     <h2>概要</h2>
     <p id='detail'></p>
     <h2>使い方</h2>
-    <p id='using'></p>
+    <p id='useing'></p>
 
     
     <script src='https://code.jquery.com/jquery-3.7.1.min.js'></script>
