--- a/project.html
+++ b/project.html
@@ -42,6 +42,12 @@
       #projectName{
         height: 50px;
       }
+      #urls > a,#tag > a{
+        background-color: #9ef5ff;
+        padding: 5px;
+        border-radius: 1px;
+        text-decoration: none;
+      }
     </style>
   </head>
   <body>
@@ -71,11 +77,12 @@
       </div>
     </div>
     <h2 id='projectName'></h2>
+    <p id='tag'></p>
     <h2>概要</h2>
     <p id='detail'></p>
     <h2>使い方</h2>
     <p id='useing'></p>
-
+    <p id='urls'></p>
     
     <script src='https://code.jquery.com/jquery-3.7.1.min.js'></script>
     <script src='https://lego0821.github.io/lego0821/JS/project.js'></script>
