--- a/project.html
+++ b/project.html
@@ -42,11 +42,18 @@
       #projectName{
         height: 50px;
       }
-      #urls > a,#tag > a{
+      #tag > a{
         background-color: #9ef5ff;
         padding: 5px;
         border-radius: 1px;
         text-decoration: none;
+        color: #8ab4f8;
+      }
+      #urls > a{
+        color: #8ab4f8;
+      }
+      #tag > a,#urls > a:visited{
+        color: #8ab4f8;
       }
     </style>
   </head>
