--- a/project.html
+++ b/project.html
@@ -43,9 +43,9 @@
         height: 50px;
       }
       #tag > a{
-        background-color: #9ef5ff;
+        background-color: #9ef5ff5a;
         padding: 5px;
-        border-radius: 1px;
+        border-radius: 10px;
         text-decoration: none;
         color: #8ab4f8;
       }
