--- a/project.html
+++ b/project.html
@@ -40,7 +40,8 @@
         background-color: #fffcdb;
       }
       #projectName{
-        height: 100px;
+        height: 50px;
+        font-size: 50px;
       }
       #tag > a{
         background-color: #9ef5ff5a;
