--- a/lego0821.html
+++ b/lego0821.html
@@ -41,7 +41,7 @@
         <div class='card'>
             <h2> 私のお気に入り</h2>
             <a href='https://scratch.mit.edu/projects/718134419'>
-                <img src='https://lego0821.github.io/lego0821/image/オンライン広場.png' alt='thumbnail'>
+                <img src='https://lego0821.github.io/lego0821/image/オンライン広場.png' alt='thumbnail' style='height: 150px;width: 200px'>
                 <p>オンライン広場</p>
             </a>
             <p>
