--- a/productions.html
+++ b/productions.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html lang='ja'>
+  <head>
+    <title></title>
+    <meta charset='utf-8'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name='description' content='this is lego0821’s scratch project page.'>
+    <meta name="theme-color" content="#9effa1"/>
+    <link rel='shortcut icon' href='https://lego0821.github.io/lego0821/image/lego0821.png'>
+    <link rel='stylesheet' href='https://lego0821.github.io/lego0821/CSS/index.css'>
+    <link rel='stylesheet' href='https://lego0821.github.io/lego0821/CSS/production_card.css'>
+    <link rel='manifest' href='manifest.json'>
+  </head>
+  <body>
+    
+  </body>
+</html>
