--- a/lego0821.html
+++ b/lego0821.html
@@ -52,7 +52,7 @@
         <div class='card'>
             <img src='https://lego0821.github.io/lego0821/image/怪盗ゲーム2.png' alt='オンライン広場'>
             <br>
-            <a href='https://scratch.mit.edu/projects/901024720'>怪盗ゲーム 第2話</a>
+            <a href='https://lego0821.github.io/lego0821/project.html#1'>怪盗ゲーム 第2話</a>
             <p class='detail'>スタートから見つからずに宝石を盗んでゴールへ行くゲームです。第1話は<a href='https://scratch.mit.edu/projects/666133831/'>こちら</a></p>
         </div>
         <a href='#' class='animation' id='top'>
