--- a/lego0821.html
+++ b/lego0821.html
@@ -40,7 +40,7 @@
         <p style='color: gray;font-size: 10px;'>Scratcher|2021年12月に参加</p>
         <div class='card'>
             <h2> 私のお気に入り</h2>
-            <a href='https://scratch.mit.edu/projects/718134419'>
+            <a href='https://lego0821.github.io/lego0821/project.html#0'>
                 <img src='https://lego0821.github.io/lego0821/image/オンライン広場.png' alt='thumbnail' style='height: 150px;width: 200px'>
                 <p>オンライン広場</p>
             </a>
