--- a/productions.html
+++ b/productions.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang='ja'>
   <head>
-    <title></title>
+    <title>作品</title>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name='description' content='this is lego0821’s scratch project page.'>
