--- a/productions.html
+++ b/productions.html
@@ -10,6 +10,15 @@
     <link rel='stylesheet' href='https://lego0821.github.io/lego0821/CSS/index.css'>
     <link rel='stylesheet' href='https://lego0821.github.io/lego0821/CSS/production_card.css'>
     <link rel='manifest' href='manifest.json'>
+    <style>
+      h1{
+        text-align: center;
+      }
+      .projects{
+        width: 100%;
+        min-height: 100%;
+      }
+    </style>
   </head>
   <body>
     <nav>
@@ -18,5 +27,7 @@
             <li id='navigations'><a href="#" class='navs'>作品</a><a href="#" class='navs'>通知</a></li>
         </ul>
     </nav>
+    <h1>作品</h1>
+    <div id='projects'></div>
   </body>
 </html>
