--- a/productions.html
+++ b/productions.html
@@ -4,7 +4,7 @@
     <title>作品</title>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name='description' content='this is lego0821’s scratch project page.'>
+    <meta name='description' content='lego0821の作品ページです。'>
     <meta name="theme-color" content="#9effa1"/>
     <link rel='shortcut icon' href='https://lego0821.github.io/lego0821/image/lego0821.png'>
     <link rel='stylesheet' href='https://lego0821.github.io/lego0821/CSS/index.css'>
