--- a/productions.html
+++ b/productions.html
@@ -17,6 +17,7 @@
       .projects{
         width: 100%;
         min-height: 100%;
+        background-color: gray;
       }
     </style>
   </head>
