--- a/productions.html
+++ b/productions.html
@@ -14,7 +14,7 @@
       h1{
         text-align: center;
       }
-      .projects{
+      #projects{
         width: 100%;
         min-height: 100%;
         background-color: gray;
