--- a/productions.html
+++ b/productions.html
@@ -14,10 +14,13 @@
       h1{
         text-align: center;
       }
-      #projects:not(.card){
+      #projects{
         width: 100%;
         min-height: 100%;
-        background-color: gray;
+        background-color: #e9e9e9;
+      }
+      .card{
+        background-color: #fff;
       }
     </style>
   </head>
