--- a/lego0821.html
+++ b/lego0821.html
@@ -29,7 +29,7 @@
         <nav>
             <ul>
                 <li><a href="https://lego0821.github.io/lego0821/lego0821.html" class="logo,navs"><img src="https://lego0821.github.io/lego0821/image/lego0821.png" class="logoImg" title="トップへ"></a></li>
-                <li id='navigations'><a href="#" class='navs'>作品</a><a href="#" class='navs'>通知</a></li>
+                <li id='navigations'><a href="https://lego0821.github.io/lego0821/productions.html" class='navs'>作品</a><a href="#" class='navs'>通知</a></li>
             </ul>
         </nav>
         <br>
