--- a/productions.html
+++ b/productions.html
@@ -16,7 +16,7 @@
       }
       #projects{
         width: 100%;
-        min-height: 100%;
+        min-height: 100vh;
         background-color: #e9e9e9;
       }
       .card{
@@ -31,8 +31,8 @@
             <li id='navigations'><a href="#" class='navs'>作品</a><a href="#" class='navs'>通知</a></li>
         </ul>
     </nav>
-    <br><br><br><br><br><br>
-    <h1>作品</h1>
+    <br><br><br><br><br>
+    <h1>作品</h1><br>
     <div id='projects'>
       
       <!-- project cards -->
