--- a/productions.html
+++ b/productions.html
@@ -21,6 +21,7 @@
       }
       .card{
         background-color: #fff;
+        box-shadow: 10px 10px 10px #93da93;
       }
     </style>
   </head>
