--- a/lego0821.html
+++ b/lego0821.html
@@ -23,6 +23,10 @@
                 margin: 0;
                 padding: 0;
             }
+            #top{
+                opacity: 0;
+                z-index: -1;
+            }
         </style>
     </head>
     <body>
