--- a/search.html
+++ b/search.html
@@ -1,1 +1,39 @@
-
+<!DOCTYPE html>
+<html lang='ja'>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="lego0821のアカウントです。">
+        <link rel="stylesheet" href="https://lego0821.github.io/lego0821/CSS/index.css">
+        <link rel='stylesheet' href='https://lego0821.github.io/lego0821/CSS/production_card.css'>
+        <link rel='shortcut icon' href='https://lego0821.github.io/lego0821/image/lego0821.png'>
+        <title>検索</title>
+        <style>
+            #myName{
+                line-height: 50px;
+                font-size: 50px;
+                color: black;
+            }
+            #myName::before{
+                content: url(https://lego0821.github.io/lego0821/image/lego0821.png);
+                vertical-align: text-top;
+            }
+            h1,h2,h3,h4,h5,h6{
+                font-weight: normal;
+                margin: 0;
+                padding: 0;
+            }
+            #top{
+                opacity: 0;
+                z-index: -1;
+            }
+        </style>
+    </head>
+    <body>
+       
+        <a href='#' class='animation' id='top'>
+            ▲TOP
+        </a>
+        <script src='https://lego0821.github.io/lego0821/JS/index.js'></script>
+    </body>
+</html>
