--- a/search.html
+++ b/search.html
@@ -9,15 +9,6 @@
         <link rel='shortcut icon' href='https://lego0821.github.io/lego0821/image/lego0821.png'>
         <title>検索</title>
         <style>
-            #myName{
-                line-height: 50px;
-                font-size: 50px;
-                color: black;
-            }
-            #myName::before{
-                content: url(https://lego0821.github.io/lego0821/image/lego0821.png);
-                vertical-align: text-top;
-            }
             h1,h2,h3,h4,h5,h6{
                 font-weight: normal;
                 margin: 0;
@@ -27,10 +18,15 @@
                 opacity: 0;
                 z-index: -1;
             }
+            input[type='search']{
+                
+            }
         </style>
     </head>
     <body>
-       
+       <br><br><br><br><br>
+        <h1>検索</h1><br>
+        <input type='search'>
         <a href='#' class='animation' id='top'>
             ▲TOP
         </a>
