--- a/search.html
+++ b/search.html
@@ -19,7 +19,9 @@
                 z-index: -1;
             }
             input[type='search']{
-                
+                width: 200px;
+                height: 50px;
+                border: 2px solid #4a3d3d;
             }
         </style>
     </head>
