--- a/search.html
+++ b/search.html
@@ -22,6 +22,7 @@
                 width: 200px;
                 height: 50px;
                 border: 2px solid #4a3d3d;
+                text-align: center;
             }
         </style>
     </head>
