--- a/project.html
+++ b/project.html
@@ -31,10 +31,18 @@
       <br>
       <br>
       <div style='z-index: 5'>
-        <input type='button' class='button' style='background-color: #39f76c' value='Scratchで開く' id='scr'>
-        <br>
-        <br>
-        <input type='button' class='button' style='background-color: #f73939' value='Turbowarpで開く' id='tur'>
+        
+        <div id='open1'>
+          <input type='button' class='button' style='background-color: #39f76c' value='Scratchで開く' id='scr'>
+          <br>
+          <br>
+          <input type='button' class='button' style='background-color: #f73939' value='Turbowarpで開く' id='tur'>
+        </div>
+
+        <div id='open2'>
+          <input type='button' class='button' style='background-color: #39a1f7' value='プレイ' id='js'>
+        </div>
+        
       </div>
     </div>
     <br>
