--- a/search.html
+++ b/search.html
@@ -26,7 +26,13 @@
             }
         </style>
     </head>
-    <body>
+    <body> 
+        <nav>
+          <ul>
+              <li><a href="https://lego0821.github.io/lego0821/lego0821.html" class="logo,navs"><img src="https://lego0821.github.io/lego0821/image/lego0821.png" class="logoImg" title="トップへ"></a></li>
+              <li id='navigations'><a href="https://lego0821.github.io/lego0821/productions.html" class='navs'>作品</a><a href="#" class='navs'>通知</a></li>
+          </ul>
+        </nav>
        <br><br><br><br><br>
         <h1>検索</h1><br>
         <input type='search'>
