--- a/lego0821.html
+++ b/lego0821.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="https://lego0821.github.io/lego0821/CSS/index.css">
         <link rel='stylesheet' href='https://lego0821.github.io/lego0821/CSS/production_card.css'>
         <link rel='shortcut icon' href='https://lego0821.github.io/lego0821/image/lego0821.png'>
+        <link rel='manifest' href='manifest.json'>
         <title>lego0821</title>
         <style>
             #myName{
