--- a/search.html
+++ b/search.html
@@ -18,11 +18,14 @@
                 opacity: 0;
                 z-index: -1;
             }
-            input[type='search']{
+            #search{
                 width: 200px;
                 height: 50px;
                 border: 2px solid #4a3d3d;
                 text-align: center;
+            }
+            #search::after{
+                content: url(https://lego0821.github.io/lego0821/image/search.svg);
             }
         </style>
     </head>
@@ -35,7 +38,7 @@
         </nav>
        <br><br><br><br><br>
         <h1>検索</h1><br>
-        <input type='search'>
+        <input type='search' id='search'>
         <a href='#' class='animation' id='top'>
             ▲TOP
         </a>
