--- a/search.html
+++ b/search.html
@@ -23,6 +23,8 @@
                 height: 50px;
                 border: 2px solid #4a3d3d;
                 text-align: center;
+                font-size: large;
+                border-radius: 50px;
             }
             #search::after{
                 content: url(https://lego0821.github.io/lego0821/image/search.svg);
@@ -38,7 +40,7 @@
         </nav>
        <br><br><br><br><br>
         <h1>検索</h1><br>
-        <input type='search' id='search'>
+        <input type='search' id='search' placeholder='検索...'>
         <a href='#' class='animation' id='top'>
             ▲TOP
         </a>
