--- a/search.html
+++ b/search.html
@@ -25,6 +25,7 @@
                 text-align: center;
                 font-size: large;
                 border-radius: 50px;
+                margin: 0 auto;
             }
             #search::after{
                 content: url(https://lego0821.github.io/lego0821/image/search.svg);
@@ -39,7 +40,7 @@
           </ul>
         </nav>
        <br><br><br><br><br>
-        <h1>検索</h1><br>
+        <h1 style='text-align: center'>検索</h1><br>
         <input type='search' id='search' placeholder='検索...'>
         <a href='#' class='animation' id='top'>
             ▲TOP
