--- a/search.html
+++ b/search.html
@@ -22,9 +22,9 @@
                 width: 200px;
                 height: 50px;
                 border: 2px solid #4a3d3d;
-                text-align: center;
                 font-size: large;
                 border-radius: 50px;
+                display: block;
                 margin: 0 auto;
             }
             #search::after{
