--- a/search.html
+++ b/search.html
@@ -19,13 +19,16 @@
                 z-index: -1;
             }
             #search{
-                width: 200px;
+                width: 500px;
                 height: 50px;
                 border: 2px solid #4a3d3d;
                 font-size: large;
                 border-radius: 50px;
                 display: block;
                 margin: 0 auto;
+            }
+            #search::placeholder{
+                text-align: center;
             }
             #search::after{
                 content: url(https://lego0821.github.io/lego0821/image/search.svg);
