--- a/notification.html
+++ b/notification.html
@@ -28,10 +28,15 @@
                 <li id='navigations'><a href="https://lego0821.github.io/lego0821/productions" class='navs'>作品</a><a href="https://lego0821.github.io/lego0821/notification" class='navs'>通知</a></li>
             </ul>
         </nav>
-      
+        <br><br><br><br><br>
+        <h2>通知</h2>
+        <div id='container'></div>
         <a href='#' class='animation' id='top'>
             ▲TOP
         </a>
         <script src='https://lego0821.github.io/lego0821/JS/index.js'></script>
+        <script>
+            
+        </script>
     </body>
 </html>
