--- a/productions.html
+++ b/productions.html
@@ -53,6 +53,14 @@
         オンライン広場</a>
         <p class='detail'>最大5人までプレイできるオンラインゲームです。</p>
       </div>
+
+      <div class='card'>
+        <a href='https://lego0821.github.io/lego0821/project.html#2'>
+        <img src='https://lego0821.github.io/lego0821/image/弓矢ゲーム.png' alt='弓矢ゲーム'>
+        <br>
+        弓矢ゲーム</a>
+        <p class='detail'>敵の矢をよけながら的や敵に矢を当てるゲームです。</p>
+      </div>
       
     </div>
   </body>
