--- a/productions.html
+++ b/productions.html
@@ -62,6 +62,13 @@
         <p class='detail'>敵の矢をよけながら的や敵に矢を当てるゲームです。</p>
       </div>
       
+      <div class='card'>
+        <a href='https://lego0821.github.io/lego0821/project.html#3'>
+        <img src='https://lego0821.github.io/lego0821/image/ミニゲーム2.png' alt='ミニゲーム2'>
+        <br>
+        ミニゲーム2</a>
+        <p class='detail'>敵をよけて進み、高得点を目指しましょう。</p>
+      </div>
     </div>
   </body>
 </html>
