--- a/notification.html
+++ b/notification.html
@@ -35,6 +35,7 @@
             ▲TOP
         </a>
         <script src='https://lego0821.github.io/lego0821/JS/index.js'></script>
+        <script src='https://code.jquery.com/jquery-3.7.1.min.js'></script>
         <script>
             
         </script>
