--- a/notification.html
+++ b/notification.html
@@ -19,6 +19,16 @@
                 opacity: 0;
                 z-index: -1;
             }
+            .notification td:nth-of-type(1){
+                background-color: #a3a3a3;
+            }
+            .notification h2{
+                display: inline;
+            }
+            .notification > table{
+                border: 1px solid gray;
+                border-radius: 10px;
+            }
         </style>
     </head>
     <body>
@@ -29,8 +39,19 @@
             </ul>
         </nav>
         <br><br><br><br><br>
-        <h2>通知</h2>
-        <div id='container'></div>
+        <h1>通知</h1>
+        <div id='container'>
+            <div class='notification'>
+                <table>
+                    <tr><td><h2>お知らせページ追加</h2><small>2024/02/16</small></td></tr>
+                    <tr><td><p>
+                        「お知らせ」のページを追加しました。
+                        <br>
+                        <a href='https://lego0821.github.io/lego0821/notification'>→こちら</a>
+                    </p></td></tr>
+                </table>
+            </div>
+        </div>
         <a href='#' class='animation' id='top'>
             ▲TOP
         </a>
