--- a/notification.html
+++ b/notification.html
@@ -19,8 +19,11 @@
                 opacity: 0;
                 z-index: -1;
             }
-            .notification td:nth-of-type(1){
+            .notification table tr td:nth-of-type(1){
                 background-color: #a3a3a3;
+            }
+            .notification small{
+                color: gray;
             }
             .notification h2{
                 display: inline;
