--- a/notification.html
+++ b/notification.html
@@ -20,7 +20,7 @@
                 z-index: -1;
             }
             .notification td:nth-of-type(1){
-                background-color: #a3a3a3;
+                background-color: #eee;
             }
             .notification small{
                 color: gray;
