--- a/notification.html
+++ b/notification.html
@@ -19,7 +19,7 @@
                 opacity: 0;
                 z-index: -1;
             }
-            .notification td:nth-of-type(1){
+            .notiTable td:nth-of-type(1){
                 background-color: #eee;
             }
             .notification small{
@@ -45,7 +45,7 @@
         <h1>通知</h1>
         <div id='container'>
             <div class='notification'>
-                <table>
+                <table class='notiTable'>
                     <tr><td><h2>お知らせページ追加</h2><small>2024/02/16</small></td></tr>
                     <tr><td><p>
                         「お知らせ」のページを追加しました。
