--- a/project.html
+++ b/project.html
@@ -14,7 +14,7 @@
   <body>
   <nav>
     <ul>
-        <li><a href="https://lego0821.github.io/lego0821/lego0821" class="logo,navs"><img src="https://lego0821.github.io/lego0821/image/lego0821.png" class="logoImg" title="トップへ"></a></li>
+        <li><a href="https://lego0821.github.io/lego0821/index" class="logo,navs"><img src="https://lego0821.github.io/lego0821/image/lego0821.png" class="logoImg" title="トップへ"></a></li>
         <li id='navigations'><a href="https://lego0821.github.io/lego0821/productions" class='navs'>作品</a><a href='https://lego0821.github.io/lego0821/notification' class='navs'>通知</a></li>
     </ul>
   </nav>
