--- a/404.html
+++ b/404.html
@@ -11,20 +11,21 @@ permalink: /404.html
     <nav>
       <ul>
           <li>
-            <a href="https://lego0821.github.io/lego0821/lego0821" class="logo,navs">
+            <a href="https://lego0821.github.io/lego0821/" class="logo,navs">
               <img src="https://lego0821.github.io/lego0821/image/lego0821.png"　class="logoImg" title="トップへ">
             </a>
           </li>
           <li id='navigations'><a href="https://lego0821.github.io/lego0821/productions" class='navs'>作品</a><a href="#" class='navs'>通知</a></li>
       </ul>
     </nav>
+    <br><br><br><br><br>
     <h1>404 Not Found</h1>
     <p>
       ページが見つかりませんでした。
       <br>
       URLをお確かめの上もう一度アクセスしてください。
       <br>
-      <a href='https://lego0821.github.io/lego0821/index'>トップへ戻る</a>
+      <a href='https://lego0821.github.io/lego0821/'>トップへ戻る</a>
     </p>
   </body>
 </html>
