--- a/404.html
+++ b/404.html
@@ -25,6 +25,8 @@ permalink: /404.html
       <br>
       URLをお確かめの上もう一度アクセスしてください。
       <br>
+      現在ディレクトリの変更を行っています。しばらくしたら解消されるかもしれません。
+      <br>
       <a href='https://lego0821.github.io/lego0821/'>トップへ戻る</a>
     </p>
   </body>
