--- a/pages/notification/index.html
+++ b/pages/notification/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="https://lego0821.github.io/lego0821/CSS/index.css">
         <link rel='stylesheet' href='https://lego0821.github.io/lego0821/CSS/production_card.css'>
         <link rel='shortcut icon' href='https://lego0821.github.io/lego0821/image/lego0821.png'>
-        <link rel='manifest' href='manifest.json'>
+        <link rel='manifest' href='https://lego0821.github.io/lego0821/manifest.json'>
         <title>lego0821</title>
         <style>
             h1,h2,h3,h4,h5,h6{
