--- a/pages/productions/index.html
+++ b/pages/productions/index.html
@@ -9,7 +9,7 @@
     <link rel='shortcut icon' href='https://lego0821.github.io/lego0821/image/lego0821.png'>
     <link rel='stylesheet' href='https://lego0821.github.io/lego0821/CSS/index.css'>
     <link rel='stylesheet' href='https://lego0821.github.io/lego0821/CSS/production_card.css'>
-    <link rel='manifest' href='manifest.json'>
+    <link rel='manifest' href='https://lego0821.github.io/lego0821/manifest.json'>
     <style>
       h1{
         text-align: center;
