--- a/pages/notification/index.html
+++ b/pages/notification/index.html
@@ -32,6 +32,9 @@
                 border: 1px solid gray;
                 border-radius: 10px;
             }
+            .important{
+                color: red;
+            }
         </style>
     </head>
     <body>
@@ -43,6 +46,20 @@
         </nav>
         <br><br><br><br><br>
         <h1>通知</h1>
+        <div id='container'>
+            <div class='notification'>
+                <table class='notiTable'>
+                    <tr><td><h2>ディレクトリの変更</h2><small>2024/02/21</small></td></tr>
+                    <tr><td><p>
+                        ページのURLを更新しています。
+                        <br>
+                        <span class='important'></span>
+                        <br>
+                        <a href='https://lego0821.github.io/lego0821/notification'>→こちら</a>
+                    </p></td></tr>
+                </table>
+            </div>
+        </div>
         <div id='container'>
             <div class='notification'>
                 <table class='notiTable'>
