--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@ permalink: /404.html
               <img src="https://lego0821.github.io/lego0821/image/lego0821.png"　class="logoImg" title="トップへ">
             </a>
           </li>
-          <li id='navigations'><a href="https://lego0821.github.io/lego0821/productions" class='navs'>作品</a><a href="#" class='navs'>通知</a></li>
+          <li id='navigations'><a href="https://lego0821.github.io/lego0821/pages/productions/" class='navs'>作品</a><a href="https://lego0821.github.io/lego0821/pages/notification/" class='navs'>通知</a></li>
       </ul>
     </nav>
     <br><br><br><br><br>
