--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@ permalink: /404.html
     <nav>
       <ul>
           <li>
-            <a href="https://lego0821.github.io/lego0821/" class="logo,navs">
+            <a href="https://lego0821.github.io/lego0821/" class="logo navs">
               <img src="https://lego0821.github.io/lego0821/image/lego0821.png"　class="logoImg" title="トップへ">
             </a>
           </li>
