--- a/pages/notification/index.html
+++ b/pages/notification/index.html
@@ -36,7 +36,7 @@
                 color: red;
             }
             .important::before{
-                content: url(triangle-exclamation.svg);
+                content: url(https://lego0821.github.io/lego0821/image/triangle-exclamation.svg);
                 display: inline-block;
             }
         </style>
