--- a/pages/notification/index.html
+++ b/pages/notification/index.html
@@ -57,7 +57,7 @@
                     <tr><td><p>
                         ページのURLを更新しています。
                         <br>
-                        <span class='important'></span>
+                        <span class='important'>これにより、404エラーが多発する可能性があります。</span>
                         <br>
                         <a href='https://lego0821.github.io/lego0821/notification'>→こちら</a>
                     </p></td></tr>
