--- a/pages/notification/index.html
+++ b/pages/notification/index.html
@@ -38,6 +38,9 @@
             .important::before{
                 content: url(https://lego0821.github.io/lego0821/image/triangle-exclamation.svg);
                 display: inline-block;
+                width: 1em;
+                height: 1em;
+                vertical-align: text-top;
             }
         </style>
     </head>
