--- a/pages/notification/index.html
+++ b/pages/notification/index.html
@@ -34,6 +34,7 @@
             }
             .important{
                 color: red;
+                font-size: 0.8em;
             }
             .important::before{
                 content: url(https://lego0821.github.io/lego0821/image/triangle-exclamation.svg);
