--- a/pages/notification/index.html
+++ b/pages/notification/index.html
@@ -35,6 +35,8 @@
             .important{
                 color: red;
                 font-size: 0.8em;
+                margin: 10px 0px;
+                display: inline-block;
             }
             .important::before{
                 content: url(https://lego0821.github.io/lego0821/image/triangle-exclamation.svg);
