--- a/pages/notification/index.html
+++ b/pages/notification/index.html
@@ -31,6 +31,7 @@
             .notification > table{
                 border: 1px solid gray;
                 border-radius: 10px;
+                width: 500px;
             }
             .important{
                 color: red;
