--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <p style='color: gray;font-size: 10px;'>Scratcher|2021年12月に参加</p>
         <div class='card'>
             <h2> 私のお気に入り</h2>
-            <a href='https://lego0821.github.io/lego0821/project.html#0'>
+            <a href='https://lego0821.github.io/lego0821/pages/project/#0'>
                 <img src='https://lego0821.github.io/lego0821/image/オンライン広場.png' alt='thumbnail' style='height: 150px;width: 200px'>
                 <p>オンライン広場</p>
             </a>
@@ -55,7 +55,7 @@
         </div>
         <h2>私の作品</h2>
         <div class='card'>
-            <a href='https://lego0821.github.io/lego0821/project.html#1'>
+            <a href='https://lego0821.github.io/lego0821/pages/project/#1'>
             <img src='https://lego0821.github.io/lego0821/image/怪盗ゲーム2.png' alt='オンライン広場'>
             <br>
             怪盗ゲーム 第2話</a>
