--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
                 opacity: 0;
                 z-index: -1;
             }
+            .over_hidden{
+                width: 750px;
+                overflow: hidden;
+            }
         </style>
     </head>
     <body>
@@ -54,12 +58,30 @@
             </p>
         </div>
         <h2>私の作品</h2>
-        <div class='card'>
-            <a href='https://lego0821.github.io/lego0821/pages/project/#1'>
-            <img src='https://lego0821.github.io/lego0821/image/怪盗ゲーム2.png' alt='オンライン広場'>
-            <br>
-            怪盗ゲーム 第2話</a>
-            <p class='detail'>スタートから見つからずに宝石を盗んでゴールへ行くゲームです。第1話は<a href='https://scratch.mit.edu/projects/666133831/'>こちら</a></p>
+        <div class='over_hidden'>
+            <div class='card'>
+                <a href='https://lego0821.github.io/lego0821/pages/project/#1'>
+                <img src='https://lego0821.github.io/lego0821/image/怪盗ゲーム2.png' alt='オンライン広場'>
+                <br>
+                怪盗ゲーム 第2話</a>
+                <p class='detail'>スタートから見つからずに宝石を盗んでゴールへ行くゲームです。第1話は<a href='https://scratch.mit.edu/projects/666133831/'>こちら</a></p>
+            </div>
+            
+            <div class='card'>
+                <a href='https://lego0821.github.io/lego0821/pages/project/#2'>
+                <img src='https://lego0821.github.io/lego0821/image/弓矢ゲーム.png' alt='弓矢ゲーム'>
+                <br>
+                弓矢ゲーム</a>
+                <p class='detail'>敵の矢をよけながら的や敵に矢を当てるゲームです。</p>
+            </div>
+          
+            <div class='card'>
+                <a href='https://lego0821.github.io/lego0821/pages/project/#3'>
+                <img src='https://lego0821.github.io/lego0821/image/ミニゲーム2.png' alt='ミニゲーム2'>
+                <br>
+                ミニゲーム2</a>
+                <p class='detail'>敵をよけて進み、高得点を目指しましょう。</p>
+            </div>
         </div>
         <a href='#' class='animation' id='top'>
             ▲TOP
