--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 opacity: 0;
                 z-index: -1;
             }
-            .over_hidden{
+            .over_scr{
                 width: 750px;
-                overflow: hidden;
+                overflow: scroll;
             }
         </style>
     </head>
@@ -58,7 +58,7 @@
             </p>
         </div>
         <h2>私の作品</h2>
-        <div class='over_hidden'>
+        <div class='over_scr'>
             <div class='card'>
                 <a href='https://lego0821.github.io/lego0821/pages/project/#1'>
                 <img src='https://lego0821.github.io/lego0821/image/怪盗ゲーム2.png' alt='オンライン広場'>
