--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             .over_scr{
                 width: 750px;
                 overflow: scroll;
+                height: 300px;
             }
         </style>
     </head>
