--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             }
             .over_scr{
                 width: 750px;
-                overflow: scroll;
+                overflow-x: scroll;
                 height: 300px;
             }
         </style>
