--- a/index.html
+++ b/index.html
@@ -29,9 +29,12 @@
                 z-index: -1;
             }
             .over_scr{
-                width: 750px;
+                width: 100%;
                 overflow-x: scroll;
-                height: 300px;
+                height: 400px;
+                white-space: nowrap;
+                border-radius: 10px;
+                border: 2px solid gray;
             }
         </style>
     </head>
