--- a/pages/column/1/index.html
+++ b/pages/column/1/index.html
@@ -15,6 +15,16 @@
                 margin: 0;
                 padding: 0;
             }
+            h3{
+                line-height: 2em;
+                font-size: 1.5em;
+                font-weight: 650;
+            }
+            h4{
+                line-height: 1.5em;
+                font-size: 1.25em;
+                font-weight: 600;
+            }
             #top{
                 opacity: 0;
                 z-index: -1;
