--- a/pages/project/index.html
+++ b/pages/project/index.html
@@ -54,6 +54,9 @@
     <h2>使い方</h2>
     <p id='useing'></p>
     <p id='urls'></p>
+    <a href='#' class='animation' id='top'>
+            ▲TOP
+        </a>
     
     <script src='https://code.jquery.com/jquery-3.7.1.min.js'></script>
     <script src='https://lego0821.github.io/lego0821/JS/project.js'></script>
