--- a/pages/setting/index.html
+++ b/pages/setting/index.html
@@ -20,8 +20,9 @@
                 z-index: -1;
             }
             .options{
-              border-top: 1px solid gray;
-              border-bottom: 1px solid gray;
+                border-top: 1px solid gray;
+                border-bottom: 1px solid gray;
+                border-collapse: collapse;
             }
         </style>
     </head>
